# getmoneybot

./: .gitignore  Dockerfile  README.md  README1.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial.py
infra/ansible/: ansible.cfg  inventory.yml  playbook.yml
infra/ansible/roles/deploy/tasks/: main.yml
infra/ansible/roles/docker/tasks/: main.yml
infra/ansible/roles/security/tasks/: main.yml
infra/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
src/getmoney/: __init__.py  config.py  main.py
src/getmoney/db/: __init__.py  session.py
src/getmoney/handlers/: __init__.py  admin.py  common.py  user.py
src/getmoney/keyboards/: __init__.py  admin.py  user.py
src/getmoney/models/: __init__.py  base.py  request.py
src/getmoney/services/: __init__.py  request.py
tests/: __init__.py  test_models.py  test_services.py
